src/components/Hero/Hero.css
:root {
  --da-hero-photo-size: 240px;
}

.hero {
  height: 92svh;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  gap: 1.5rem;
}

.hero__info {
  display: flex;
  flex-direction: column;
  order: 2;
  gap: 1rem;
}

.hero__photo {
  width: var(--da-hero-photo-size);
  height: var(--da-hero-photo-size);
  border-radius: var(--da-hero-photo-size);
  object-fit: cover;
  order: 1;
}

.title {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.wave {
  animation-name: wave-animation; /* Refers to the name of your @keyframes element below */
  animation-duration: 2.5s; /* Change to speed up or slow down */
  animation-iteration-count: infinite; /* Never stop waving :) */
  transform-origin: 70% 70%; /* Pivot around the bottom-left palm */
  display: inline-block;
}

@keyframes wave-animation {
  0% {
    transform: rotate(0deg);
  }
  10% {
    transform: rotate(14deg);
  } /* The following five values can be played with to make the waving more or less extreme */
  20% {
    transform: rotate(-8deg);
  }
  30% {
    transform: rotate(14deg);
  }
  40% {
    transform: rotate(-4deg);
  }
  50% {
    transform: rotate(10deg);
  }
  60% {
    transform: rotate(0deg);
  } /* Reset for the last half to pause */
  100% {
    transform: rotate(0deg);
  }
}

.text-blinking {
  animation: blinker 0.5s alternate infinite;
}

@keyframes blinker {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.cta-wrapper {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 2rem;
  width: 100%;
}

.cta-button {
  display: inline-block;
  padding: var(--da-button-padding-top) var(--da-button-padding-left);

  border-radius: 1rem;
  font-size: 0.875rem;
  font-weight: 700;
  gap: 10px;
  letter-spacing: 0.1rem;
  text-align: center;

  border: 3px solid transparent;
  background-color: var(--da-color-highlight);
  color: var(--da-color-background);
}

.button-social {
  background-color: var(--da-color-primary);
  color: var(--da-color-background);
  padding: var(--da-button-padding-top) var(--da-button-padding-left);
  border-radius: 1rem;
  display: flex;
}

.social-links-wrapper {
  display: flex;
  gap: 1rem;
}

.social-links__logo {
  width: 1.5rem;
  height: 1.5rem;
  stroke: none;
  fill: var(--da-color-background);
  stroke-width: 1px;
}

